brat/test/golden/error/vecpat.brat.golden
Error in test/golden/error/vecpat.brat@FC {start = Pos {line = 3, col = 5}, end = Pos {line = 3, col = 10}}:
fst3(nil) = none
    ^^^^^

  Unification error: Couldn't unify 0 with 3

